--- a/scss/components/pageBlog/_blogMainSection.scss
+++ b/scss/components/pageBlog/_blogMainSection.scss
@@ -144,6 +144,7 @@
   height: 100vh;
   height: 100svh;
   position: relative;
+  background-color: $colorBlack;
 
   .blogassistantVideo__video {
     position: absolute;
